# arthasetu

./: .gitignore  README.md
docs_resources/mf_list_source/: mf_list_source.adoc
python_modules/: Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirnments.txt
python_modules/prototypes/sbi/: all-schemes-monthly-portfolio---as-on-28th-february-2023.xlsx  first_sheet_parsing.ipynb  sbi_parsing_prototype.ipynb  sbi_parsing_scrapbook.ipynb
python_modules/src/: __about__.py
python_modules/src/controllers/: fast_api_hello.py
python_modules/src/ingestion_engines/orchestrators/sbi_ingestion_orchestrator/: sbi_ingestion_orchestrator.py
python_modules/src/ingestion_engines/parsers/sbi_parser/: core_sheet_parser.py
python_modules/src/portfolio_processing_engines/sbi/file_downloader/: file_downloader.py
python_modules/src/portfolio_processing_engines/sbi/ingestion/: bq_writer.py  sbi_ingestion_orchestrator.py
python_modules/src/portfolio_processing_engines/sbi/parsing_engine/: core_parser.py  folio_sheet_parser.py
python_modules/src/prototypes/sbi/: first_sheet_parsing.ipynb  sbi_parsing_prototype.ipynb
