[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-sys"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "sg0220142", email = "tushar.bisht@sabre.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "jupyterlab",
    "pandas",
    "openpyxl",
    "numpy",
    "google-cloud-bigquery",
    "pyarrow"
]

[project.urls]
Documentation = "https://github.com/sg0220142/py-sys#readme"
Issues = "https://github.com/sg0220142/py-sys/issues"
Source = "https://github.com/sg0220142/py-sys"

[tool.hatch.version]
path = "src/__about__.py"


[tool.hatch.envs.default]
python = "3.10"


[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]



[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py_sys tests}"

[tool.coverage.run]
source_pkgs = ["src", "tests"]
branch = true
parallel = true
omit = [
    "src/__about__.py",
]

[tool.coverage.paths]
py_sys = ["src/", "*/src/"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

